src/ssa/snapshots/ribit__ssa__lower__test__addi_no_src.snap
---
source: src/ssa/lower.rs
expression: DisplayDeferSlice(&instrs)

---
%0 = args[0]
%1 = args[1]
x(%0)2 = 00000032
ret 00000001, 00000008
