src/ssa/snapshots/ribit__ssa__lower__test__addi_nop.snap
---
source: src/ssa/lower.rs
expression: DisplayDeferSlice(&instrs)

---
%0 = args[0]
%1 = args[1]
ret 00000001, 00000008
