src/ssa/snapshots/ribit__ssa__lower__test__branch_0_0_eq.snap
---
source: src/ssa/lower.rs
expression: DisplayDeferSlice(&instrs)
---
%0 = args[0]
%1 = args[1]
ret 0, 1024
