src/ssa/snapshots/ribit__ssa__lower__test__branch_0_x1_eq.snap
---
source: src/ssa/lower.rs
expression: DisplayDeferSlice(&instrs)
---
%0 = args[0]
%1 = args[1]
%2 = x(%0)1
%3 = cmp EQ 0, %2
%4 = select %3, 1024, 4
ret 0, %4
