src/ssa/snapshots/ribit__ssa__lower__test__jal_basic.snap
---
source: src/ssa/lower.rs
expression: DisplayDeferSlice(&instrs)
---
%0 = args[0]
%1 = args[1]
x(%0)4 = 4
ret 0, 4096
