src/ssa/snapshots/ribit__ssa__lower__test__jalr_bit.snap
---
source: src/ssa/lower.rs
expression: DisplayDeferSlice(&instrs)

---
%0 = args[0]
%1 = args[1]
%2 = x(%0)1
%3 = add %2, 000007ff
%4 = and %3, fffffffe
x(%0)4 = 00000034
ret 00000000, %4
